--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 
     color: var(--color-font);
 }
-h1{
+h1, h2{
     font-family: var(--font);
     font-size: 2.8rem;
     font-weight: bold;
@@ -29,30 +29,29 @@ p{
     font-weight: 400;
     font-size: 1.4rem;
 }
+
 #page{
     width: 31.9rem;
 
     margin: 5.3rem auto;
+
+    padding: 0 3.2rem;
+
+    box-sizing: content-box;
 }
 main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 3.6rem;
+    gap: 3.2rem;
 }
 #sobre img{
-    margin: 4.6rem 0;
-}
-#ingredientes h1{
-    margin-bottom: 3.6rem;
+    margin-block: 0 0 3.2rem 0;
 }
 #ingredientes strong{
     font-family: var(--font);
     font-size: 1.4rem;
     font-weight: bold;
-}
-#ingredientes ol{
-    margin: 1.7rem 0;
 }
 #ingredientes li{
     margin-left: 2rem;
@@ -60,10 +59,14 @@ main{
     font-family: var(--font);
     font-size: 1.4rem;
 }
+#ingredientes ul{
+    margin-bottom: 3.2rem;
+}
 button{
     font-family: 'Source Serif 4';
     font-size: 0.9rem;
     font-weight: medium;
+    line-height: 1.7rem;
 
     color: #fff;
     background-color: #A54328;
@@ -71,6 +74,72 @@ button{
     width: 9.4rem;
     height: 3.1rem;
 
-    border-radius: 5px;
+    border-radius: .6rem;
     border: none;
+
+    margin-top: 1.8rem;
+}
+
+
+
+/* Desktop */
+@media (min-width: 1200px){
+#page{
+    width: 114.9rem;
+
+    margin: 6.7rem auto;
+    
+    padding: 0 14.6rem;
+
+    box-sizing: content-box;
+}
+main{
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+
+
+    
+    gap: 18.9rem;
+}
+#sobre{
+    width: 43.5rem;
+}
+#sobre img{
+    margin: 6.6rem 0;
+}
+#ingredientes{
+    width: 52.5rem;
+}
+h1,h2{
+    font-size: 4rem;
+}
+p{
+    font-size: 2rem;
+}
+#ingredientes strong{
+    font-family: var(--font);
+    font-size: 2rem;
+    font-weight: bold;
+}
+#ingredientes li{
+    font-family: var(--font);
+    font-size: 2rem;
+
+    margin-left: 3rem;
+}
+button{
+    font-family: 'Source Serif 4';
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+    font-weight: medium;
+
+    width: 13.3rem;
+    height: 4.5rem;
+
+    border-radius: 8px;
+    border: none;
+
+    margin-top: 2.4rem;
+}
 }
